microk8s/busybox-with-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-with-vol
  labels:
    app: busybox-with-vol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-with-vol
  template:
    metadata:
      labels:
        app: busybox-with-vol
    spec:
      containers:
      - name: busybox-with-vol
        image: busybox
        imagePullPolicy: Never
        command: ['sh', '-c', 'sleep 3600']
        volumeMounts:
          - name: mymount
            mountPath: /host
      volumes:
        - name: mymount
          persistentVolumeClaim:
            claimName: host-pvc
